--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,9 @@ dependencies {
     //Dagger-hilt implementation
     implementation("com.google.dagger:hilt-android:2.40.5")
     kapt("com.google.dagger:hilt-android-compiler:2.40.5")
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+    implementation "androidx.hilt:hilt-compiler:1.0.0"
+    kapt "androidx.hilt:hilt-compiler:1.0.0"
     //Dagger-hilt compose navigation implementation
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
 
@@ -92,6 +95,8 @@ dependencies {
 
     //Apache POI for excel
     implementation 'org.apache.poi:poi:3.17'
+
+
 
 }
 
