--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id ("kotlin-kapt")
-    id("dagger.hilt.android.plugin")
+    id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
     id 'com.google.gms.google-services'
 }
 
@@ -13,12 +13,12 @@ kapt {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.nadim.atlaspackaging"
         minSdk 21
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -52,49 +52,57 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+    namespace 'com.nadim.atlaspackaging'
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
     //noinspection GradleDependency
     implementation "androidx.compose.ui:ui:$compose_version"
     //noinspection GradleDependency
-    implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.material:material:1.0.1"
     //noinspection GradleDependency
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
-    implementation 'androidx.activity:activity-compose:1.4.0'
-    implementation 'com.google.firebase:firebase-auth-ktx:21.0.5'
-    implementation 'com.google.firebase:firebase-database-ktx:20.0.5'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    implementation 'androidx.activity:activity-compose:1.6.1'
+    implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
+    implementation 'com.google.firebase:firebase-database-ktx:20.1.0'
+    implementation "androidx.navigation:navigation-compose:2.5.3"
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     //noinspection GradleDependency
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     //noinspection GradleDependency
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
     //Dagger-hilt implementation
-    implementation("com.google.dagger:hilt-android:2.40.5")
-    kapt("com.google.dagger:hilt-android-compiler:2.40.5")
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
-    implementation "androidx.hilt:hilt-compiler:1.0.0"
-    kapt "androidx.hilt:hilt-compiler:1.0.0"
+    implementation "com.google.dagger:hilt-android:2.44.2"
+    kapt "com.google.dagger:hilt-compiler:2.44.2"
+
     //Dagger-hilt compose navigation implementation
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
+    implementation 'androidx.hilt:hilt-navigation-fragment:1.0.0'
+
 
     // Gradle Groovy DLS
-    implementation "org.jetbrains.kotlin:kotlin-reflect:1.6.20"
-
-    // Room components
-    implementation 'androidx.room:room-runtime:2.4.2'
-    kapt 'androidx.room:room-compiler:2.4.2'
-    implementation 'androidx.room:room-ktx:2.4.2'
-    androidTestImplementation 'androidx.room:room-testing:2.4.2'
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.7.20"
 
     //Apache POI for excel
     implementation 'org.apache.poi:poi:3.17'
+
+
+    // Room components
+//    implementation 'androidx.room:room-runtime:2.4.2'
+//    kapt 'androidx.room:room-compiler:2.4.2'
+//    implementation 'androidx.room:room-ktx:2.4.2'
+//    androidTestImplementation 'androidx.room:room-testing:2.4.2'
+
+    // Hilt components that i think are not necessary for the project
+//    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+//    implementation "androidx.hilt:hilt-compiler:1.0.0"
+//    kapt "androidx.hilt:hilt-compiler:1.0.0"
 
 
 
