--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,22 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 buildscript {
     ext {
-        compose_version = '1.0.1'
+        compose_version = '1.3.2'
     }
-
+    ext.kotlin_version = '1.7.20'
     dependencies {
-        classpath("com.google.dagger:hilt-android-gradle-plugin:2.40.5")
-        classpath 'com.google.gms:google-services:4.3.12'
+        classpath("com.google.dagger:hilt-android-gradle-plugin:2.44.2")
+        classpath 'com.google.gms:google-services:4.3.14'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
-}// Top-level build file where you can add configuration options common to all sub-projects/modules.
+}
 
 plugins {
-    id 'com.android.application' version '7.2.0' apply false
-    id 'com.android.library' version '7.2.0' apply false
+    id 'com.android.application' version '7.3.1' apply false
+    id 'com.android.library' version '7.3.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.5.21' apply false
+    id 'com.google.dagger.hilt.android' version '2.44' apply false
 }
 
 task clean(type: Delete) {
