--- a/build.gradle
+++ b/build.gradle
@@ -7,15 +7,15 @@ buildscript {
     ext.kotlin_version = '1.7.20'
     dependencies {
         classpath("com.google.dagger:hilt-android-gradle-plugin:2.44.2")
-        classpath 'com.google.gms:google-services:4.3.14'
+        classpath 'com.google.gms:google-services:4.3.15'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
 plugins {
-    id 'com.android.application' version '7.3.1' apply false
-    id 'com.android.library' version '7.3.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.5.21' apply false
+    id 'com.android.application' version '7.4.0' apply false
+    id 'com.android.library' version '7.4.0' apply false
+//    id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
     id 'com.google.dagger.hilt.android' version '2.44' apply false
 }
 
