--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,10 @@
 
 buildscript {
     ext {
-        compose_version = '1.3.2'
+        compose_version = '1.4.0'
+        compose_ui_version = '1.3.3'
     }
-    ext.kotlin_version = '1.7.20'
+    ext.kotlin_version = '1.8.0'
     dependencies {
         classpath("com.google.dagger:hilt-android-gradle-plugin:2.44.2")
         classpath 'com.google.gms:google-services:4.3.15'
@@ -15,9 +16,11 @@ buildscript {
 plugins {
     id 'com.android.application' version '7.4.0' apply false
     id 'com.android.library' version '7.4.0' apply false
-//    id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
     id 'com.google.dagger.hilt.android' version '2.44' apply false
 }
+
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
