--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,6 +92,9 @@ dependencies {
     //Apache POI for excel
     implementation 'org.apache.poi:poi:3.17'
 
+    // Kotlin Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
+
 
     // Room components
 //    implementation 'androidx.room:room-runtime:2.4.2'
